<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/thumbnail_container"
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/thumbnail"
                android:scaleType="centerCrop"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/no_thumbnail_textview"
                    android:text="@string/no_thumbnail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <ProgressBar
                    android:id="@+id/thumbnail_loading_indicator"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

        </RelativeLayout>

        <TextView
            android:text="@string/no_headline_info"
            android:id="@+id/headline"
            android:textSize="28sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text=""
            android:id="@+id/trail_text"
            android:paddingTop="8dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/no_author_info"
            android:id="@+id/author"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/no_publish_date"
            android:id="@+id/publish_date"
            android:textSize="16sp"
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:text="@string/read_article"
            android:id="@+id/read_article_button"
            android:textColor="@color/textColorDark"
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>